Fork my own git-wiki repo

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title= @page || GitWiki::wiki_name
-    %link{:rel => 'stylesheet', :type => 'text/css', :href => '/wiki.css'}
+    %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/wiki.css'}
   %body
     %h1#title<
       %a.home{:href => '/'}>= GitWiki::wiki_name
